--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "build": "tsc",
         "prestart": "npm run build",
+        "start-build": "NODE_ENV=prod node -r ts-node/register -r tsconfig-paths/register dist/src/server.js",
         "start-dev": "NODE_ENV=dev nodemon",
         "test": "NODE_ENV=test jest"
     },
