--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,8 @@
       "@exceptions/*": ["./app/exceptions/*"]
     }
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "include": [
+    "./src/app/**/*"
+  ]
 }
