--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     },
     "homepage": "https://github.com/berk2s/train-together-backend#readme",
     "dependencies": {
+        "@types/mongoose": "^5.11.97",
         "dotenv": "^16.0.1",
-        "express": "^4.18.1"
+        "express": "^4.18.1",
+        "mongoose": "^6.4.6"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
