--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "homepage": "https://github.com/berk2s/train-together-backend#readme",
     "dependencies": {
         "@types/mongoose": "^5.11.97",
+        "@types/winston": "^2.4.4",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
-        "mongoose": "^6.4.6"
+        "mongoose": "^6.4.6",
+        "winston": "^3.8.1",
+        "winston-daily-rotate-file": "^4.7.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
