--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "mongoose": "^6.4.6",
+        "node-schedule": "^2.1.0",
         "winston": "^3.8.1",
         "winston-daily-rotate-file": "^4.7.1"
     },
@@ -34,6 +35,7 @@
         "@types/express": "^4.17.13",
         "@types/jest": "^28.1.6",
         "@types/node": "^18.0.6",
+        "@types/node-schedule": "^2.1.0",
         "@types/supertest": "^2.0.12",
         "jest": "^28.1.3",
         "nodemon": "^2.0.19",
