--- a/package.json
+++ b/package.json
@@ -22,13 +22,20 @@
     },
     "homepage": "https://github.com/berk2s/train-together-backend#readme",
     "dependencies": {
+        "@types/mongoose": "^5.11.97",
+        "@types/winston": "^2.4.4",
         "dotenv": "^16.0.1",
-        "express": "^4.18.1"
+        "express": "^4.18.1",
+        "mongoose": "^6.4.6",
+        "node-schedule": "^2.1.0",
+        "winston": "^3.8.1",
+        "winston-daily-rotate-file": "^4.7.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
         "@types/jest": "^28.1.6",
         "@types/node": "^18.0.6",
+        "@types/node-schedule": "^2.1.0",
         "@types/supertest": "^2.0.12",
         "jest": "^28.1.3",
         "nodemon": "^2.0.19",
