--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,5 @@
       "@exceptions/*": ["./app/exceptions/*"]
     }
   },
-  "exclude": ["node_modules"],
-  "include": [
-    "./src/app/**/*"
-  ]
+  "exclude": ["node_modules"]
 }
