--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "dependencies": {
         "@types/mongoose": "^5.11.97",
         "@types/winston": "^2.4.4",
+        "body-parser": "^1.20.0",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.13.2",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "mongoose": "^6.4.6",
@@ -37,6 +40,7 @@
         "@types/node": "^18.0.6",
         "@types/node-schedule": "^2.1.0",
         "@types/supertest": "^2.0.12",
+        "@types/validator": "^13.7.4",
         "jest": "^28.1.3",
         "nodemon": "^2.0.19",
         "supertest": "^6.2.4",
