--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,3 @@
 NODE_ENV=dev
-PORT=3000
-MONGO_CONNECTION_URL=mongodb://localhost:27017/traintogether
+PORT=8081
+MONGO_CONNECTION_URL=mongodb://tt-user:tt-password@localhost:27017/traintogether?authMechanism=DEFAULT
