--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,3 @@
 NODE_ENV=prod
 PORT=8000
-MONGO_CONNECTION_URL=mongodb://localhost:27017/traintogether
+MONGO_CONNECTION_URL=mongodb://root:password@localhost:27017/?authMechanism=DEFAULT
