--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "@types/mongoose": "^5.11.97",
         "@types/winston": "^2.4.4",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
