--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "mongoose": "^6.4.6",
+        "multer": "^1.4.5-lts.1",
         "node-schedule": "^2.1.0",
+        "sharp": "^0.30.7",
+        "uuid": "^8.3.2",
         "winston": "^3.8.1",
         "winston-daily-rotate-file": "^4.7.1"
     },
