--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "multer": "^1.4.5-lts.1",
         "node-schedule": "^2.1.0",
         "sharp": "^0.30.7",
+        "stripe": "^9.14.0",
         "uuid": "^8.3.2",
         "winston": "^3.8.1",
         "winston-daily-rotate-file": "^4.7.1"
