--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "homepage": "https://github.com/berk2s/train-together-backend#readme",
     "dependencies": {
         "@types/mongoose": "^5.11.97",
+        "@types/socket.io": "^3.0.2",
         "@types/winston": "^2.4.4",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.0",
@@ -36,6 +37,7 @@
         "multer": "^1.4.5-lts.1",
         "node-schedule": "^2.1.0",
         "sharp": "^0.30.7",
+        "socket.io": "^4.5.1",
         "stripe": "^9.14.0",
         "uuid": "^8.3.2",
         "winston": "^3.8.1",
