--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
         "express": "^4.18.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.4.6",
+        "mongoose-query-parser": "^1.3.1",
         "multer": "^1.4.5-lts.1",
         "node-schedule": "^2.1.0",
+        "querymen": "^2.1.4",
         "sharp": "^0.30.7",
         "socket.io": "^4.5.1",
         "stripe": "^9.14.0",
